--- a/index.html
+++ b/index.html
@@ -8,25 +8,25 @@
 </head>
 <body class="font-sans antialiased text-gray-900">
 
-  <!-- Navbar -->
   <header class="bg-white shadow">
     <div class="max-w-7xl mx-auto flex justify-between items-center py-4 px-6">
-      <h1 class="text-2xl font-bold text-purple-700">Landwind</h1>
-      <nav class="hidden md:flex space-x-6 text-gray-600">
-        <a href="#" class="hover:text-purple-600">Company</a>
-        <a href="#" class="hover:text-purple-600">Marketplace</a>
-        <a href="#" class="hover:text-purple-600">Features</a>
-        <a href="#" class="hover:text-purple-600">Team</a>
-        <a href="#" class="hover:text-purple-600">Contact</a>
-      </nav>
-      <div class="space-x-3">
-        <a href="#" class="text-gray-600 hover:text-purple-600">Log in</a>
-        <a href="#" class="px-4 py-2 bg-purple-600 text-white rounded-lg">Get started</a>
-      </div>
+        <div class="flex items-center space-x-4 ">
+            <img src="images/landwind.png "  alt="Logo" class="h-9 w-25 ">
+        </div>
+        <nav class="hidden md:flex space-x-6 text-gray-600">
+            <a href="#" class="hover:text-purple-600">Company</a>
+            <a href="#" class="hover:text-purple-600">Marketplace</a>
+            <a href="#" class="hover:text-purple-600">Features</a>
+            <a href="#" class="hover:text-purple-600">Team</a>
+            <a href="#" class="hover:text-purple-600">Contact</a>
+        </nav>
+        <div class="space-x-3">
+            <a href="#" class="text-gray-600 hover:text-purple-600">Log in</a>
+            <a href="#" class="px-4 py-2 bg-purple-600 text-white rounded-lg">Get started</a>
+        </div>
     </div>
   </header>
 
-  <!-- Hero Section -->
   <section class="bg-gray-50 py-20">
     <div class="max-w-7xl mx-auto grid md:grid-cols-2 gap-10 items-center px-6">
       <div>
@@ -51,13 +51,10 @@
     </div>
   </section>
 
-  <!-- Partners -->
     <div class="max-w-6xl mx-auto flex justify-center flex-wrap gap-8 px-6">
         <img src="images/imageLogo.png" alt="Airbnb" class="w-100 h-auto" />
     </div>
 
-
-  <!-- Features -->
   <section class="py-20 bg-gray-50">
     <div class="max-w-7xl mx-auto grid md:grid-cols-2 gap-12 px-6 items-center">
       <div>
@@ -117,7 +114,7 @@
     </div>
   </div>
 </section>
-  <!-- Pricing -->
+
   <section class="py-20 bg-white">
     <div class="max-w-6xl mx-auto text-center px-6">
       <h3 class="text-4xl font-bold mb-10">Pay as you grow</h3>
@@ -166,10 +163,16 @@
     </div>
 </section>
 
-  <!-- Footer -->
-  <footer class="bg-gray-100 py-6 text-center text-gray-600">
-    © 2025 Landwind. All rights reserved.
-  </footer>
+<section class="bg-gray-50 py-16">
+  <div class="max-w-xl mx-auto text-center">
+    <h2 class="text-3xl md:text-4xl font-bold text-gray-900 mb-4">Start your free trial today</h2>
+    <p class="text-gray-600 mb-8">Try Flowbite Platform for 30 days.No credit card required.</p>
+    <button class="bg-purple-600 text-white px-8 py-3 rounded hover:bg-purple-700 transition font-semibold">Free trial for 30 days</button>
+  </div>
+</section>
+<footer class="bg-gray-100 py-6 text-center text-gray-600">
+    © 2022 Flowbite, Inc. All rights reserved.
+</footer>
 
 </body>
 </html>
