--- a/index.html
+++ b/index.html
@@ -7,8 +7,6 @@
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body class="font-sans antialiased text-gray-900">
-
-  <!-- Navbar -->
   <header class="bg-white shadow">
     <div class="max-w-7xl mx-auto flex justify-between items-center py-4 px-6">
         <div class="flex items-center space-x-4 ">
@@ -52,12 +50,9 @@
     </div>
   </section>
 
-    <div class="max-w-6xl mx-auto flex justify-center flex-wrap gap-8 px-6">
-        <img src="images/imageLogo.png" alt="Airbnb" class="w-100 h-auto" />
-    </div>
-
-
-  <!-- Features -->
+  <div class="max-w-6xl mx-auto flex justify-center flex-wrap gap-8 px-6">
+      <img src="images/imageLogo.png" alt="Airbnb" class="w-100 h-auto" />
+  </div>
   <section class="py-20 bg-gray-50">
     <div class="max-w-7xl mx-auto grid md:grid-cols-2 gap-12 px-6 items-center">
       <div>
@@ -117,7 +112,7 @@
     </div>
   </div>
 </section>
-  <!-- Pricing -->
+  
   <section class="py-20 bg-white">
     <div class="max-w-6xl mx-auto text-center px-6">
       <h3 class="text-4xl font-bold mb-10">Pay as you grow</h3>
@@ -164,12 +159,17 @@
         </div>
       </div>
     </div>
+  </section>
+<section class="bg-gray-50 py-16">
+  <div class="max-w-xl mx-auto text-center">
+    <h2 class="text-3xl md:text-4xl font-bold text-gray-900 mb-4">Start your free trial today</h2>
+    <p class="text-gray-600 mb-8">Try Flowbite Platform for 30 days.No credit card required.</p>
+    <button class="bg-purple-600 text-white px-8 py-3 rounded hover:bg-purple-700 transition font-semibold">Free trial for 30 days</button>
+  </div>
 </section>
-
-  <!-- Footer -->
-  <footer class="bg-gray-100 py-6 text-center text-gray-600">
-    © 2025 Landwind. All rights reserved.
-  </footer>
+<footer class="bg-gray-100 py-6 text-center text-gray-600">
+  © 2022 Flowbite, Inc. All rights reserved.
+</footer>
 
 </body>
 </html>
